[package]
name = "bitcoin-wallet"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6.20"
bdk = { version = "0.28.0", features = ["sqlite"] }
dotenv = "0.15.0"
serde = { version = "1.0.181", features = ["derive"] }
serde_json = "1.0.104"
tokio = { version = "1.29.1", features = ["full"] }
